[gd_scene load_steps=44 format=3 uid="uid://236u4uh1snic"]

[ext_resource type="Script" path="res://technical/events/jerryseinfeld.gd" id="1_8wkrw"]
[ext_resource type="Texture2D" uid="uid://bdgxmy1frebgy" path="res://assets/images/events/jerrySeinfeld/climb1.png" id="1_e6t3d"]
[ext_resource type="Texture2D" uid="uid://bu2mf1xo3ewjv" path="res://assets/images/events/jerrySeinfeld/climb2.png" id="2_fqwuu"]
[ext_resource type="Texture2D" uid="uid://c0y87av0sh2tj" path="res://assets/images/events/jerrySeinfeld/punch1.png" id="3_vhiaa"]
[ext_resource type="Texture2D" uid="uid://gc786yhu3a1r" path="res://assets/images/events/jerrySeinfeld/punch2.png" id="4_gq5t8"]
[ext_resource type="Texture2D" uid="uid://c1rsxkgvlr1ir" path="res://assets/images/events/jerrySeinfeld/steal1.png" id="5_uuowh"]
[ext_resource type="Texture2D" uid="uid://b8w5u628lx3jl" path="res://assets/images/events/jerrySeinfeld/steal2.png" id="6_3u4pj"]
[ext_resource type="Texture2D" uid="uid://civjspunasfwf" path="res://assets/images/events/jerrySeinfeld/fall.png" id="6_yy0w1"]
[ext_resource type="Texture2D" uid="uid://5nytpiat28sl" path="res://assets/images/events/jerrySeinfeld/tail/002.png" id="7_n1ooq"]
[ext_resource type="Texture2D" uid="uid://lutxtboe8mws" path="res://assets/images/events/jerrySeinfeld/tail/003.png" id="8_pmyag"]
[ext_resource type="Texture2D" uid="uid://dpjy0vr5vsyl8" path="res://assets/images/events/jerrySeinfeld/tail/004.png" id="9_jfcmp"]
[ext_resource type="Texture2D" uid="uid://bpik77rhe1c50" path="res://assets/images/events/jerrySeinfeld/tail/001.png" id="10_fgtd2"]
[ext_resource type="Texture2D" uid="uid://cqedqy50uwate" path="res://assets/images/events/jerrySeinfeld/tail/005.png" id="10_q4hg8"]
[ext_resource type="Texture2D" uid="uid://bpho88hul16to" path="res://assets/images/events/jerrySeinfeld/tail/006.png" id="11_53bet"]
[ext_resource type="Texture2D" uid="uid://nr6s5ivqvk27" path="res://assets/images/events/jerrySeinfeld/tail/007.png" id="12_bm70u"]
[ext_resource type="Texture2D" uid="uid://b4i2pip1nb0oy" path="res://assets/images/events/jerrySeinfeld/tail/008.png" id="13_viepn"]
[ext_resource type="Texture2D" uid="uid://dlwa8blwa5mqk" path="res://assets/images/events/jerrySeinfeld/tail/009.png" id="14_45q5f"]
[ext_resource type="Texture2D" uid="uid://swy1rvqblule" path="res://assets/images/events/jerrySeinfeld/tail/010.png" id="15_nt6a4"]
[ext_resource type="Texture2D" uid="uid://dpc7331nq336i" path="res://assets/images/events/jerrySeinfeld/tail/011.png" id="16_wi504"]
[ext_resource type="Texture2D" uid="uid://825326ukfrc8" path="res://assets/images/events/jerrySeinfeld/tail/012.png" id="17_tdex4"]
[ext_resource type="Texture2D" uid="uid://dlpppntivx3cw" path="res://assets/images/events/jerrySeinfeld/tail/013.png" id="18_algml"]
[ext_resource type="Texture2D" uid="uid://c7a6ma0rkinag" path="res://assets/images/events/jerrySeinfeld/tail/014.png" id="19_bdclc"]
[ext_resource type="Texture2D" uid="uid://cqee1pnapt8ce" path="res://assets/images/events/jerrySeinfeld/tail/015.png" id="20_sfj0e"]
[ext_resource type="Texture2D" uid="uid://bf3peilwdeb6o" path="res://assets/images/events/jerrySeinfeld/tail/016.png" id="21_ajejd"]
[ext_resource type="Texture2D" uid="uid://cdqas81l8diji" path="res://assets/images/events/jerrySeinfeld/tail/017.png" id="22_yb4md"]
[ext_resource type="Texture2D" uid="uid://caiww368i4mua" path="res://assets/images/events/jerrySeinfeld/tail/018.png" id="23_xdqj8"]
[ext_resource type="Texture2D" uid="uid://x6plwu7lr7a4" path="res://assets/images/events/jerrySeinfeld/tail/019.png" id="24_h8n2r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ncuq4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_e6t3d")
}, {
"duration": 1.0,
"texture": ExtResource("2_fqwuu")
}],
"loop": true,
"name": &"climb",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yy0w1")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vhiaa")
}, {
"duration": 1.0,
"texture": ExtResource("4_gq5t8")
}],
"loop": false,
"name": &"punch",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_uuowh")
}, {
"duration": 1.0,
"texture": ExtResource("6_3u4pj")
}],
"loop": true,
"name": &"steal",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_37b5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fgtd2")
}],
"loop": true,
"name": &"noTail",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_n1ooq")
}, {
"duration": 1.0,
"texture": ExtResource("8_pmyag")
}, {
"duration": 1.0,
"texture": ExtResource("9_jfcmp")
}, {
"duration": 1.0,
"texture": ExtResource("10_q4hg8")
}, {
"duration": 1.0,
"texture": ExtResource("11_53bet")
}, {
"duration": 1.0,
"texture": ExtResource("12_bm70u")
}, {
"duration": 1.0,
"texture": ExtResource("13_viepn")
}, {
"duration": 1.0,
"texture": ExtResource("14_45q5f")
}, {
"duration": 1.0,
"texture": ExtResource("15_nt6a4")
}, {
"duration": 1.0,
"texture": ExtResource("16_wi504")
}, {
"duration": 1.0,
"texture": ExtResource("17_tdex4")
}, {
"duration": 1.0,
"texture": ExtResource("18_algml")
}, {
"duration": 1.0,
"texture": ExtResource("19_bdclc")
}, {
"duration": 1.0,
"texture": ExtResource("20_sfj0e")
}, {
"duration": 1.0,
"texture": ExtResource("21_ajejd")
}, {
"duration": 1.0,
"texture": ExtResource("22_yb4md")
}, {
"duration": 1.0,
"texture": ExtResource("23_xdqj8")
}, {
"duration": 1.0,
"texture": ExtResource("24_h8n2r")
}],
"loop": true,
"name": &"tail",
"speed": 12.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ylci6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gdd7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5kkwy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6kdl8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nwc4g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sm2w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_guceq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mmc3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nm1w1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_po8wm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b32ky"]

[sub_resource type="Animation" id="Animation_4g7av"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jerry:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_julb3"]
resource_name = "spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("jerry:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1coc6"]
_data = {
"RESET": SubResource("Animation_4g7av"),
"spawn": SubResource("Animation_julb3")
}

[node name="Jerryseinfeld" type="Node2D"]
script = ExtResource("1_8wkrw")

[node name="jerry" type="AnimatedSprite2D" parent="."]
position = Vector2(156, 725)
sprite_frames = SubResource("SpriteFrames_ncuq4")
animation = &"steal"
autoplay = "climb"

[node name="jerryTail" type="AnimatedSprite2D" parent="jerry"]
position = Vector2(4, 2)
sprite_frames = SubResource("SpriteFrames_37b5e")
animation = &"noTail"

[node name="Button" type="Button" parent="jerry"]
offset_left = -98.0
offset_top = -134.0
offset_right = 92.0
offset_bottom = 105.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ylci6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_gdd7b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5kkwy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_6kdl8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nwc4g")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_8sm2w")
theme_override_styles/hover = SubResource("StyleBoxEmpty_guceq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_4mmc3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nm1w1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_po8wm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b32ky")

[node name="resetState" type="Timer" parent="."]
wait_time = 0.5

[node name="shakeLength" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1coc6")
}
autoplay = "spawn"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="jerry/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="resetState" to="." method="_on_reset_state_timeout"]
[connection signal="timeout" from="shakeLength" to="." method="_on_shake_length_timeout"]
